--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@
     font-weight: 400;
     font-style: normal;
   }
+  .font-roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
 
   .playwrite{
     font-family: "Playwrite AU SA", serif;
